[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Rogério Chaves <rogeriochaves@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
openai = "^1.35.13"
chainlit = "^1.1.306"
langwatch = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
